--- a/wa/wa4.html
+++ b/wa/wa4.html
@@ -27,5 +27,22 @@
     </footer>
   </section>
 
+  <section class="card2">
+    <header>
+      <h2>Leonardo DiCaprio</h2>
+    </header>
+    <article>
+      <img src="Leonardo_Dicaprio.jpg" alt="A picture of Chris - a man with glasses, a beard, and a silly wooly hat">
+      <p>Birth: November 11, 1974. Los Angeles, California, U.S.<br>
+        Featured in Film: Titanic (1997)<br>
+        Appeared in Time magazine's 100 most influential people in the world (2016)<br>
+        Lead actor in The Wolf of Wall Street<br>
+        <strong> Was voted one of the 50 greatest actors of all time in 2022 readers' poll by Empire.</strong> </p>
+    </article>
+    <footer>
+      <p>American actor and film producer</p>
+    </footer>
+  </section>
   </body>
 </html>
+
