--- a/html-midterm/page1.html
+++ b/html-midterm/page1.html
@@ -5,9 +5,9 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="/html-midterm/page1.html">Page 1</a>
+        <a href="https://LeoL23.github.io/html-midterm/page1.html">Page 1</a>
         <span> | </span>
-        <a href="/html-midterm/page2.html">Page 2</a>
+        <a href="https://LeoL23.github.io/html-midterm/page2.html">Page 2</a>
         <span> | </span>
         <a href="/html-midterm/page3.html">Page 3</a>
         <span> | </span>
@@ -24,7 +24,7 @@
         <li>Item 3</li>
         <li>Item 4</li>
     </ul>
-    <img src="image.png" alt="An example image"> 
+    <img src="LeoL23.github.io/html-midterm/img/image.png" alt="An example image"> #added img/
     <a href="https://www.example.com">Click here to visit example.com</a>
     <div>
         <p>This div contains a nested paragraph.</p>
