--- a/html-midterm/page2.html
+++ b/html-midterm/page2.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mid-term Page 2</title>
+    <link rel="stylesheet" href="./html-midterm/cars.css">
 </head>
 <body>
     <div class="navbar">
@@ -34,7 +35,7 @@
             The structure was granted protection as a grade II listed building by Historic England on 13 July 2022. 
             The owners have subsequently applied to convert the pub into offices.
         </p>
-    <h3>Description</h3>
+    <h2>Description</h2>
     <hr>
     <p>
         The three-storey building is stone built with a slate roof and faces onto the B6144 road (Westgate). 
@@ -54,7 +55,7 @@
     <p>
         The ground floor is centred around a lobby running from the front to the rear; with two main rooms on either side of the lobby.
         The lobby is also used by drinkers who can be served by a hatch that opens onto the bar in the tap room to the right.
-        The tap room is set up as a saloon (or lounge) bar with leather bench seats around the walls and a fireplace with a <a href="where do i go">segmental arch</a> surround.
+        The tap room is set up as a saloon (or lounge) bar with leather bench seats around the walls and a fireplace with a <a href="https://en.wikipedia.org/wiki/Segmental_arch">segmental arch</a> surround.
         The floor is tiled with terrazzo and the walls are covered with Lincrusta.
         In the place where the bar once stood an archway leads through to the music room, which is generally unremarkable.
     </p>
@@ -71,7 +72,7 @@
         similar arrangement to the ground floor but have no remarkable features. A cellar originally 
         sat just beneath the tap room but was extended south-east at a later date. The ground floor retains gas lighting
     </p>
-    <h6>History
+    <h3>History
     <hr>
     <p>
         A connection is sometimes made erroneously to the Beehive Inn further along Westgate, 
@@ -105,8 +106,8 @@
         The oak-panelled bar dated to 1901 and featured mirror-backed oak shelving behind and an iron footrail. 
         In an attempt to protect the structure and interior the pub was granted statutory protection by Historic England as a grade II listed building on 13 July 2022. 
         At the time it was described by Historic England as "a rare survival of a late Victorian internal plan of four rooms centred around a drinking lobby" and "a rare example of a public house built by a local authority". 
-        CAMRA described it as "Bradford’s last remaining public house to retain an interior of outstanding historic importance" and the City of Bradford Metropolitan District Council (successors to the Bradford Corporation) 
-        said "It’s unique in the district as a public house built by Bradford Corporation and it still retains the original four room layout". 
+        CAMRA described it as "Bradfords last remaining public house to retain an interior of outstanding historic importance" and the City of Bradford Metropolitan District Council (successors to the Bradford Corporation) 
+        said "Its unique in the district as a public house built by Bradford Corporation and it still retains the original four room layout". 
         Because of the listing any significant alterations will require planning permission.
     </p>
     <p>
