--- a/html-midterm/page5.html
+++ b/html-midterm/page5.html
@@ -23,29 +23,37 @@
 
     <h2>Page 1</h2>
         <ul>
-            <li>Line 22 was missing </li> at the end of Item 3. </li>
-            <li>Line 28 was missing a </p> to close out <p> </li>
-            <li>Line 34 was missing a </td> to close out the line of code.
-            <li>Line 40 was missing </tr> to close out <tr>
+            <li>Line 22 was missing /li at the end of Item 3 to close out. </li>
+            <li>Line 28 was missing a /p to close out p </li>
+            <li>Line 34 was missing a /td to close out the line of code.
+            <li>Line 40 was missing /tr to close out tr
             <li>Line 43 needed a closing table tag as table was called on line 32.
         </ul>
 
     <h2>Page 2</h2>
         <ul>
-            <li>Line 25 was: "The <b>New Beehive Inn<>". There was supposed to be a </b> after Inn instead, so I changed it to that. </li>
-            <li>Line 61: there was an unnecessaery ; after a </a>, so I got rid of the ; </li>
+            <li>Line 25 was: "The b New Beehive Inn ". There was supposed to be a /b after Inn instead, so I changed it to that. </li>
+            <li>Line 61: there was an unnecessaery ; after a /a, so I got rid of the ; </li>
+            <li>Fixed ordering of headers. H6 became an h3, swapped an h3 and h2 to make the subheadings make sense/accurate</li>
+            <li>Added the missing stylesheet link</li>
+            <li>Apostrophes were highlighed in the closure paragraph, fixed</li>
+            <li>The "link," 'where do i go' causes an error link because it has spaces/incomplete link. I found the real link from the Source Page & replaced it.</li>
         </ul>
 
     <h2>Page 3</h2>
         <ul>
             <li>Had to add missing title, meta, and link to css stylesheet</li>
+            <li>Added !doctype and 'lang='en''</li>
+            
         </ul>
 
     <h2>Page 4</h2>
         <ul>
             <li>Needed Doc type at the top of document</li>
-            <li>Line 36 didn't have a </td> at the end, so I added it</li>
-            <li>Line 46 had a </td> when it didn't need it so I deleted it</li>
+            <li>Fixed three td tags within table</li>
+            <li>fixed table: swapped columns and rows so images were correctly matched with labels</li>
+
+
         </ul>
 
 </body>
