--- a/html-midterm/page5.html
+++ b/html-midterm/page5.html
@@ -44,7 +44,7 @@
         <ul>
             <li>Had to add missing title, meta, and link to css stylesheet</li>
             <li>Added !doctype and 'lang='en''</li>
-            
+
         </ul>
 
     <h2>Page 4</h2>
@@ -52,7 +52,8 @@
             <li>Needed Doc type at the top of document</li>
             <li>Fixed three td tags within table</li>
             <li>fixed table: swapped columns and rows so images were correctly matched with labels</li>
-
+            <li> Added alt descriptions to all img tags</li>
+            <li> Added css to page</li>
 
         </ul>
 
