--- a/html-midterm/page4.html
+++ b/html-midterm/page4.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page 4</title>
+    <link rel="stylesheet" href="./html-midterm/cars.css">
     <style>
         img{
             width:200px;
@@ -34,19 +35,19 @@
             <th>Other?</th>
         </tr>
         <tr>
-            <td><img src="img/dogsFrolic.png"></td> 
-            <td><img src="img/orangeCat.png"></td>
-            <td><img src="img/creature.png"></td>
+            <td><img src="img/dogsFrolic.png" alt="dogs frolicking"></td> 
+            <td><img src="img/orangeCat.png" alt="an orange car"></td>
+            <td><img src="img/creature.png" alt="a strange creature"></td>
         </tr>
         <tr>
-            <td><img src="img/dogSinging.png"></td>
-            <td><img src="img/boxingCats.png"></td>
-            <td><img src="img/aliensPeace.png"></td>
+            <td><img src="img/dogSinging.png" alt="A dog singing"></td>
+            <td><img src="img/boxingCats.png" alt="cats in a boxing match"></td>
+            <td><img src="img/aliensPeace.png" alt="aliens coming in peace"></td>
         </tr>
         <tr>
-            <td><img src="img/labLab.png"></td>
-            <td><img src="img/sunCat.png"></td>
-            <td><img src="img/diamondAlien.png"></td>
+            <td><img src="img/labLab.png" alt="A lab in a lab"></td>
+            <td><img src="img/sunCat.png" alt="A cat laying in the sun"></td>
+            <td><img src="img/diamondAlien.png" alt="Aliens around diamonds"></td>
     
         </tr>
 
