--- a/html-midterm/page1.html
+++ b/html-midterm/page1.html
@@ -24,7 +24,7 @@
         <li>Item 3</li>
         <li>Item 4</li>
     </ul>
-    <img src="LeoL23.github.io/html-midterm/img/image.png" alt="An example image"> #added img/
+    <img src="LeoL23.github.io/html-midterm/img/image.png" alt="An example image"> 
     <a href="https://www.example.com">Click here to visit example.com</a>
     <div>
         <p>This div contains a nested paragraph.</p>
