--- a/html-midterm/page2.html
+++ b/html-midterm/page2.html
@@ -72,7 +72,7 @@
         similar arrangement to the ground floor but have no remarkable features. A cellar originally 
         sat just beneath the tap room but was extended south-east at a later date. The ground floor retains gas lighting
     </p>
-    <h2>History
+    <h2>History</h2>
     <hr>
     <p>
         A connection is sometimes made erroneously to the Beehive Inn further along Westgate, 
