--- a/html-midterm/page5.html
+++ b/html-midterm/page5.html
@@ -39,7 +39,7 @@
                 <ul>
                     <li>Line 25 was: "The b New Beehive Inn ". There was supposed to be a /b after Inn instead, so I changed it to that. </li>
                     <li>Line 61: there was an unnecessaery ; after a /a, so I got rid of the ; </li>
-                    <li>Fixed ordering of headers. H6 became an h3, swapped an h3 and h2 to make the subheadings make sense/accurate </li>
+                    <li>Fixed ordering of headers. H6 became an h2, swapped an h3 into an h2 to make the subheadings make sense/accurate </li>
                     <li>Added the missing stylesheet link </li>
                     <li>Apostrophes were highlighed in the closure paragraph, fixed </li>
                     <li>The "link," 'where do i go' causes an error link because it has spaces/incomplete link. I found the real link from the Source Page & replaced it. </li>
