--- a/wa/wa6.html
+++ b/wa/wa6.html
@@ -9,20 +9,25 @@
 <body>
     <div class="container">
             <div class="box1">
-                <h2>Score</h2>
-                <p>1234567890</p>
+                <h2>New York Raiders VS. New Jersey Devils - Score</h2>
+                <p>NYR - 0    ;   NJD - 0</p>
             </div>
             <div class="box2">
                 <h2>Time & Period</h2>
-                <p>13:02 - 2</p>
+                <p>14:43 - 1st Quarter - 1 Penalties </p>
             </div>
     </div>
     <div class="container2">
         <div class="box3">
             <h2>Presented By The NHL</h2>
-            <p>This Message Is Sponspored By Pepsi</p>  
+            <p>This Message Is Sponspored By COORS LIGHT</p> 
         </div> 
     </div>
+    <div class="container3">
+        <div class="box4">
+            <h2>The Half Time Show Presented By Pepsi</h2>
+        </div> 
+    </div> 
     <div class="holder">
         <img src="wa6IMAGE.jpg">
     </div>
