--- a/wa/wa6.html
+++ b/wa/wa6.html
@@ -25,7 +25,7 @@
     </div>
     <div class="container3">
         <div class="box4">
-            <h2>The Half Time Show Presented By Pepsi</h2>
+            <h2>The Half Time Show Is Presented By Pepsi</h2>
         </div> 
     </div> 
     <div class="holder">
