--- a/wa/wa6.html
+++ b/wa/wa6.html
@@ -14,7 +14,7 @@
             </div>
             <div class="box2">
                 <h2>Time & Period</h2>
-                <p>14:43 - 1st Quarter - 1 Penalties </p>
+                <p>14:43 - 1st Period - 1 Penalties </p>
             </div>
     </div>
     <div class="container2">
