--- a/wa/wa6.html
+++ b/wa/wa6.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
             <div class="box1">
-                <h2>New York Raiders VS. New Jersey Devils - Score</h2>
+                <h2>New York Rangers VS. New Jersey Devils - Score</h2>
                 <p>NYR - 0    ;   NJD - 0</p>
             </div>
             <div class="box2">
