--- a/CSS-MIDTERM/index.html
+++ b/CSS-MIDTERM/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Vivaldi's The Four Seasons</title>
+    <title>Colorado Symphony Classics 2022-202</title>
 </head>
 <body>
     
