--- a/CSS-MIDTERM/index.html
+++ b/CSS-MIDTERM/index.html
@@ -31,14 +31,15 @@
         <h2>Among today’s best and brightest composers, Jessie Montgomery’s Strum draws on the spirit of dance,
             movement, and American folk expressions in an ecstatic celebration that will have you on the edge of
             your seat.</h2>
-        <section>Featured Artists</section>
+        <section>Featured Artists
             <article>Aram Demirjian, conductor</article>
             <article>Paul Huang, violin</article>
-        
-        <section>Repertoire</section>
+        </section>
+        <section>Repertoire
             <article>JESSIE MONTGOMERY Strum</article>
             <article>VIVALDI The Four Seasons, Op. 8, No. 1-4</article>
             <article>TCHAIKOVSKY Symphony No. 4 in F minor, Op. 3</article>
+        </section>
     </div>
     <div class = "concert">
         <h2>Vivaldi's The Four Seasons</h2>
