--- a/ica/ica10.html
+++ b/ica/ica10.html
@@ -20,32 +20,41 @@
             height: 100px;
             width: 100px;
         }
-        </style>
+    </style>
 </head>
 <body>
     <button type="button">PRESSSSSS MEEEEE! PLS!!!</button>
     <div id="press" type="button">Press me</div>
     <button id="try">"Crazy?</button>
-    <h1 id="text"></h1< 
-    <h1 id="hover">THEY TRAPPED ME!</h2>
-    <b id="effect"></b>
+    <h1 id="text"></h1> 
+    <button id="hover">Lock me in a room?</button>
+    <b id="click"></b>
+    <img id="press">
+    <h2 id="JASON"></h2>
 
     <script>
         // variables defined using 'const' or 'let'
         const button = document.querySelector("button");
         const press = document.getElementById("press");
+        const JASON = document.getElementById("JASON");
 
         button.addEventListener('click', updateName);
         press.addEventListener('click', updateName);
+        JASON.addEventListener('click', updateName);
 
         function updateName() {
             //let name = prompt["Enter a new name"];
             let name = 10;
-            console.log("The Function ran correctly")
+            console.log("The Function ran correctly");
             console.log(name);
             //button.textContent = 'Player 1: ${name}';
             press.innerHTML = '<h1>Hello!</h1>'
         }
+        function RespondMouseOver(){
+            document.getElementByID("effect").innerHTML +=
+                "Hello everyone!" ;
+        }
     </script>
+    <img src="friday_the_13th_jason_voorhees_via_new_line_warner_bros._site.jpg">
 </body>
 </html>
