--- a/wa/wa10.html
+++ b/wa/wa10.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
 
     <title>Silly story generator</title>
-    <link rel = "stylesheet" href="wa10.css"
+    <link rel = "stylesheet" href="../wa/wa10.css"
 
   <body>
     <div>
