--- a/wa/wa10.html
+++ b/wa/wa10.html
@@ -5,26 +5,26 @@
         <meta name="viewport" content="width=device-width" />
 
         <title>Silly story generator</title>
-        <link rel = "stylesheet" href="../wa/wa10.css"
+        <link rel = "stylesheet" href="../wa/wa10.css">
+        <script defer src="../js/wa10.js"></script>
 
     </head>
+
     <body>
         <div>
-        <label for="customname">Enter custom name:</label>
-        <input id="customname" type="text" placeholder="" />
+            <label for="customname">Enter custom name:</label>
+            <input id="customname" type="text" placeholder="" />
         </div>
         <div>
-        <label for="us">US</label
-        ><input id="us" type="radio" name="ukus" value="us" checked />
-        <label for="uk">UK</label
-        ><input id="uk" type="radio" name="ukus" value="uk" />
+            <label for="us">US</label
+            ><input id="us" type="radio" name="ukus" value="us" checked />
+            <label for="uk">UK</label
+            ><input id="uk" type="radio" name="ukus" value="uk" />
         </div>
         <div>
-        <button class="randomize">Generate random story</button>
+            <button class="randomize">Generate random story</button>
         </div>
         <!-- Thanks a lot to Willy Aguirre for his help with the code for this assessment -->
         <p class="story"></p>
-
-        <script src="../js/wa10.js"></script>
     </body>
 </html>
