--- a/wa/wa11.html
+++ b/wa/wa11.html
@@ -10,10 +10,10 @@
   </head>
 
   <body>
-    <h1>Image gallery example</h1>
+    <h1>AVERNGERS</h1>
 
     <div class="full-img">
-      <img class="displayed-img" src="images/pic1.jpg" alt="Closeup of a human eye">
+      <img class="displayed-img" src="images/131108082143-thor-the-dark-world.jpg" alt="Closeup of a human eye">
       <div class="overlay"></div>
       <button class="dark">Darken</button>
     </div>
