--- a/wa/wa11.html
+++ b/wa/wa11.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Image gallery</title>
+    <title>AVENGERS</title>
 
     <link rel="stylesheet" href="wa11.css">
     
   </head>
 
   <body>
-    <h1>AVERNGERS</h1>
+    <h1>AVENGERS</h1>
 
     <div class="full-img">
       <img class="displayed-img" src="images/131108082143-thor-the-dark-world.jpg" alt="Closeup of a human eye">
