--- a/wa12.html
+++ b/wa12.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <div class="app">
-        <header>Random Christmas Trivia</header>
+        <header>Random Jokes</header>
         <section class="quotes">
           <div class="quote-text" id="js-quote-text"></div>
           <div class="quote-text" id="js-answer-text"></div>
         </section>
         <section class="controls" >
           <button type="button" id="js-new-quote" class="new-quote button">
-            Generate a new bit of trivia!
+            Generate a new joke!
           </button>
           <button type="button" id="js-tweet" class="twitter button">
             Show me the answer!
@@ -24,6 +24,6 @@
           <!-- <a class="answer button" id="js-tweet" target="_blank" rel="noreferrer">Show me the answer!</a> -->
         </section>
       </div>
-      <script src="wa12.css"></script>
+      <script src="wa12.js"></script>
 </body>
 </html>
