--- a/wa12.html
+++ b/wa12.html
@@ -19,7 +19,7 @@
             Generate a new joke!
           </button>
           <button type="button" id="js-tweet" class="twitter button">
-            Show me the answer!
+            Show me the joke!
           </button>
           <!-- <a class="answer button" id="js-tweet" target="_blank" rel="noreferrer">Show me the answer!</a> -->
         </section>
