--- a/JS-final/JS.html
+++ b/JS-final/JS.html
@@ -9,15 +9,9 @@
 
   <body>
     <h1>JS Final</h1>
-    <div id="main-container">
-        <form id="phone-form">
-            <div class="input-container" id="input-container">
-                <!-- Input boxes will be dynamically created here -->
-              </div>
-              <button type="button" onclick="setNumber()">Set</button>
-              <button type="button" onclick="restart()">Restart</button>
-        </form>
-    </div>
+    <div id="input-container"></div>
+    <button onclick="setNumber()" class="set-button">Set</button>
+    <button onclick="restart()" class="restart-button">Restart</button>
     <script src="JS.js"></script>
   </body>
 </html>
