--- a/JS-final/JS.html
+++ b/JS-final/JS.html
@@ -12,7 +12,7 @@
     <div id="input-container"></div>
     <button onclick="setNumber()" class="set-button">Set</button>
     <button onclick="restart()" class="restart-button">Restart</button>
-    <button onclick="SubmitEvent()" class="submit-button">Submit</button>
+    <button onclick="submit()" class="submit-button">Submit</button>
     <script src="JS.js"></script>
   </body>
 </html>
