--- a/JS-final/JS.html
+++ b/JS-final/JS.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <h1>JS Final</h1>
+    <h1>Enter Your Phone Number</h1>
     <div id="input-container"></div>
     <button onclick="setNumber()" class="set-button">Set</button>
     <button onclick="restart()" class="restart-button">Restart</button>
